--- a/examples/vanillaJS/notice/notice.css
+++ b/examples/vanillaJS/notice/notice.css
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import './variables.css';
 #notice-container {
-  --wall-gap: 10px;
   position: fixed;
   top: var(--wall-gap);
   left: var(--wall-gap);
@@ -8,6 +7,10 @@
   flex-direction: column;
   gap: 10px;
   font-family: "Montserrat", sans-serif;
+}
+
+#notice-container.contained {
+  position: absolute;
 }
 
 #notice-container.top-left {
@@ -46,16 +49,17 @@
 }
 
 #notice-container .notification {
-  background-color: #eeeeee;
-  color: #000000;
+  background-color: var(--light-background-color);
+  color: var(--light-text-color);
   box-shadow: 0px 16px 34px -7px rgba(0, 0, 0, 0.25);
   border-radius: 7px;
   padding: 10px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  min-width: 300px;
-  max-width: 100%;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  min-width: -webkit-min-content;
+  min-width: -moz-min-content;
+  min-width: min-content;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -65,41 +69,105 @@
   transition: opacity 300ms, translate 300ms;
 }
 #notice-container .notification .notification-icon {
-  height: 36px;
-  width: 36px;
-  min-width: 36px;
+  --icon-size: 32px;
+  height: var(--icon-size);
+  width: var(--icon-size);
+  min-width: var(--icon-size);
 }
 #notice-container .notification .notification-icon svg {
   width: 100%;
   height: 100%;
 }
+#notice-container .notification .notification-icon.error svg .stroke {
+  stroke: var(--light-error-color);
+}
+#notice-container .notification .notification-icon.error svg .fill {
+  fill: var(--light-error-color);
+}
+#notice-container .notification .notification-icon.warning svg .stroke {
+  stroke: var(--light-warning-color);
+}
+#notice-container .notification .notification-icon.warning svg .fill {
+  fill: var(--light-warning-color);
+}
+#notice-container .notification .notification-icon.success svg .stroke {
+  stroke: var(--light-success-color);
+}
+#notice-container .notification .notification-icon.success svg .fill {
+  fill: var(--light-success-color);
+}
+#notice-container .notification .notification-icon.alert svg .stroke {
+  stroke: var(--light-alert-color);
+}
+#notice-container .notification .notification-icon.alert svg .fill {
+  fill: var(--light-alert-color);
+}
 #notice-container .notification .notification-text {
   width: 100%;
+  margin-right: 10px;
+}
+#notice-container .notification .notification-text:has(+ .notification-close) {
+  margin-right: 0;
 }
 #notice-container .notification .notification-close {
   cursor: pointer;
 }
-#notice-container .notification.show {
-  opacity: 1;
-  translate: 0 0;
-}
 
 #notice-container.dark .notification {
-  background-color: #303030;
-  color: #FFFFFF;
+  background-color: var(--dark-background-color);
+  color: var(--dark-text-color);
 }
-#notice-container.dark .notification-close svg path {
-  stroke: #FFFFFF;
+#notice-container.dark .notification .notification-close svg path {
+  stroke: #ffffff;
+}
+#notice-container.dark .notification .notification-icon.error svg .stroke {
+  stroke: var(--dark-error-color);
+}
+#notice-container.dark .notification .notification-icon.error svg .fill {
+  fill: var(--dark-error-color);
+}
+#notice-container.dark .notification .notification-icon.warning svg .stroke {
+  stroke: var(--dark-warning-color);
+}
+#notice-container.dark .notification .notification-icon.warning svg .fill {
+  fill: var(--dark-warning-color);
+}
+#notice-container.dark .notification .notification-icon.success svg .stroke {
+  stroke: var(--dark-success-color);
+}
+#notice-container.dark .notification .notification-icon.success svg .fill {
+  fill: var(--dark-success-color);
+}
+#notice-container.dark .notification .notification-icon.alert svg .stroke {
+  stroke: var(--dark-alert-color);
+}
+#notice-container.dark .notification .notification-icon.alert svg .fill {
+  fill: var(--dark-alert-color);
 }
 
-#notice-container.rounded .notification {
-  border-radius: 50px;
-}
-
-#notice-container.bottom-right .notification, #notice-container.bottom-center .notification, #notice-container.bottom-left .notification {
+#notice-container.bottom-right .notification,
+#notice-container.bottom-center .notification,
+#notice-container.bottom-left .notification {
   translate: 0 100%;
 }
-#notice-container.bottom-right .notification.show, #notice-container.bottom-center .notification.show, #notice-container.bottom-left .notification.show {
+
+#notice-container.slide-up .notification {
+  translate: 0 -100%;
+}
+
+#notice-container.slide-down .notification {
+  translate: 0 100%;
+}
+
+#notice-container.slide-left .notification {
+  translate: 100% 0;
+}
+
+#notice-container.slide-right .notification {
+  translate: -100% 0;
+}
+
+#notice-container .notification.show {
   opacity: 1;
   translate: 0 0;
 }
